--- a/app/views/rails_admin/main/_submit_buttons.html.haml
+++ b/app/views/rails_admin/main/_submit_buttons.html.haml
@@ -1,11 +1,11 @@
 .actions
-  %button.btn.primary{:type => "submit", :name => "_save"}
+  %button.btn.primary{:type => "submit", :name => "_save", :'data-disable-with' => t("admin.new.save")}
     = t("admin.new.save")
   %span.extra_buttons
     - if authorized? :new, @abstract_model
-      %button.btn{:type => "submit", :name => "_add_another"}
+      %button.btn{:type => "submit", :name => "_add_another", :'data-disable-with' => t("admin.new.save_and_add_another")}
         = t("admin.new.save_and_add_another")
-    %button.btn{:type => "submit", :name => "_add_edit"}
+    %button.btn{:type => "submit", :name => "_add_edit", :'data-disable-with' => t("admin.new.save_and_edit")}
       = t("admin.new.save_and_edit")
-    %button.btn{:type => "submit", :name => "_continue"}
+    %button.btn{:type => "submit", :name => "_continue", :'data-disable-with' => t("admin.new.cancel")}
       = t("admin.new.cancel")
