textarea styling [ci skip]

--- a/app/assets/stylesheets/rails_admin/ra.theme.css.less
+++ b/app/assets/stylesheets/rails_admin/ra.theme.css.less
@@ -11,7 +11,7 @@
 
 /* We want input size to be used, unfixate input width */
 input, textarea {
-  width:inherit;
+  width:auto;
 }
 
 /* ui-autocomplete has z-index 1 and is shown over filtering select button (.add-on) */
