fix date-picker [ci skip]

--- a/app/assets/stylesheets/rails_admin/ra.theme.css.less
+++ b/app/assets/stylesheets/rails_admin/ra.theme.css.less
@@ -30,7 +30,7 @@ input, textarea {
 }
 
 /* Table cell behaviour */
-table td {
+table.zebra-striped td {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
