--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -57,9 +57,10 @@
         #filters_box
     .row.clearfix
       .span3
-        %input{:name => "query", :type => "search", :value => query, :placeholder => "#{t("admin.list.search")}"}
+        %input{:name => "query", :type => "search", :value => query, :placeholder => t("admin.list.search")}
       .span3
-        %button.btn.primary{:type => "submit", :'data-disable-with' => "Refeshing..."}Refresh
+        %button.btn.primary{:type => "submit", :'data-disable-with' => t("admin.list.refresh")}= t("admin.list.refresh")
+      %span{:style => 'float:right'}=link_to t("admin.list.export_current_action"), export_path(params.except('page')), :class => 'btn danger'
 
   = form_tag bulk_action_path(:model_name => @abstract_model.to_param), :method => :post, :id => "bulk_form", :class => "form" do
     = hidden_field_tag :bulk_action
@@ -75,13 +76,12 @@
             - property_pretty_name = property.label
             - selected = sort == property_name.to_s
             - if property.sortable
-              - sort_location = list_path params.merge(:sort => property_name, :sort_reverse => (selected && sort_reverse != 'true') ? 'true' : 'false')
+              - sort_location = list_path params.except('page').merge(:sort => property_name, :sort_reverse => (selected && sort_reverse != 'true') ? 'true' : 'false')
               - sort_direction = selected ? (sort_reverse == 'true' ? "headerSortUp" : "headerSortDown") : nil
             - cell = property_pretty_name
             %th{:class => "#{property.sortable && "header" || nil} #{property.sortable && sort_direction ? sort_direction : nil} #{property.css_class}", :'data-link' => (property.sortable && sort_location)}= cell
           %th.other.right{ :style => "#{'display: none' if @other.include?("right")}" }...
           %th.last
-
       %tbody
         - @objects.each do |object|
           %tr
