--- a/app/views/layouts/rails_admin/_models_tabs.html.haml
+++ b/app/views/layouts/rails_admin/_models_tabs.html.haml
@@ -8,15 +8,15 @@
 %li{:class => (params[:action] == 'list' && 'active')}= link_to @model_config.label_plural, list_path(:model_name => params[:model_name]) if can_list
 %li{:class => (params[:action] == 'new' && 'active')}= link_to t("admin.list.add_new"), new_path(:model_name => params[:model_name]) if can_create
 %li{:class => (params[:action] == 'for_model' && 'active')}= link_to t("admin.history.name"), history_model_path(:model_name => params[:model_name]) if can_see_history
-%li{:class => (params[:action] == 'export' && 'active')}= link_to t("admin.list.export_action"), export_path(params[:model_name]) if can_export
+%li{:class => (params[:action] == 'export' && 'active')}= link_to t("admin.breadcrumbs.export").capitalize, export_path(params[:model_name]) if can_export
 
 - if params[:action] == 'list' 
   - if (can_delete || can_export)
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
-      %a.dropdown-toggle Selected...
+      %a.dropdown-toggle= t('admin.list.selected') + "..."
       %ul.dropdown-menu
-        %li= link_to_function t("admin.list.export_selected"), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit(); return false;" if can_export
-        %li= link_to_function t("admin.list.delete_selected"), "jQuery('#bulk_action').val('delete'); jQuery('#bulk_form').submit(); return false;" if can_delete
+        %li= link_to_function t("admin.list.export_selected"), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit()" if can_export
+        %li= link_to_function t("admin.list.delete_selected"), "jQuery('#bulk_action').val('delete'); jQuery('#bulk_form').submit()" if can_delete
   - if @filterable_fields.present?
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
       %a.dropdown-toggle= t('admin.list.add_filter') + "..."
