--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -6,9 +6,9 @@
   %input{:name => "send_data", :type => "hidden", :value => "true"}/
   .row
     %fieldset
-      %legend Choose fields to export
+      %legend= t('admin.export.select')
       .span5.clearfix
-        %label{:rel => 'twipsy', :'data-original-title' => 'Click to reverse selection', :onclick => 'jQuery(this).siblings(".input").find("input").click()'}= t('admin.export.fields_from', :name => @abstract_model.pretty_name)
+        %label{:rel => 'twipsy', :'data-original-title' => t('admin.export.click_to_reverse_selection'), :onclick => 'jQuery(this).siblings(".input").find("input").click()'}= t('admin.export.fields_from', :name => @abstract_model.pretty_name)
         .input
           %ul.inputs-list
             - visible_fields.select{ |f| !f.association? || f.association[:polymorphic] }.each do |field|
@@ -31,7 +31,7 @@
           - association = field.association
           - associated_model = association[:type] == :belongs_to ? association[:parent_model] : association[:child_model]
           - fields = RailsAdmin.config(associated_model).export.with(:view => self, :object => associated_model.new).visible_fields.select{ |f| !f.association? }
-          %label{:rel => 'twipsy', :'data-original-title' => 'Click to reverse selection', :onclick => 'jQuery(this).siblings(".input").find("input").click()'}= t('admin.export.fields_from_associated', :name => field.label)
+          %label{:rel => 'twipsy', :'data-original-title' => t('admin.export.click_to_reverse_selection'), :onclick => 'jQuery(this).siblings(".input").find("input").click()'}= t('admin.export.fields_from_associated', :name => field.label)
           .input
             %ul.inputs-list
               - fields.each do |associated_model_field|
@@ -60,11 +60,11 @@
         %span.help-inline= t('admin.export.csv.col_sep_help', :value => t('admin.export.csv.default_col_sep'))
 
   .actions
-    %button.btn.primary{:type => "submit", :name => 'csv', :'data-disable-with' => t("admin.export.confirmation", :name => 'csv')}
+    %button.btn.primary{:type => "submit", :name => 'csv'}
       = t("admin.export.confirmation", :name => 'csv')
-    %button.btn.info{:type => "submit", :name => 'json', :'data-disable-with' => t("admin.export.confirmation", :name => 'json')}
+    %button.btn.info{:type => "submit", :name => 'json'}
       = t("admin.export.confirmation", :name => 'json')
-    %button.btn.info{:type => "submit", :name => 'xml', :'data-disable-with' => t("admin.export.confirmation", :name => 'xml')}
+    %button.btn.info{:type => "submit", :name => 'xml'}
       = t("admin.export.confirmation", :name => 'xml')
-    %button.btn{:type => "submit", :name => "_continue", :'data-disable-with' => t("admin.new.cancel")}
+    %button.btn{:type => "submit", :name => "_continue"}
       = t("admin.new.cancel")
