--- a/app/views/rails_admin/main/list.html.haml
+++ b/app/views/rails_admin/main/list.html.haml
@@ -96,9 +96,9 @@
             - other_right = list_path(params.merge(:set => (params[:set].to_i + 1)))
             %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
             %td.last
-              = link_to show_label,   show_path(:model_name =>    params[:model_name], :id => object) if authorized? :show,   @abstract_model, object
-              = link_to edit_label,   edit_path(:model_name =>    params[:model_name], :id => object) if authorized? :edit,   @abstract_model, object
-              = link_to delete_label, delete_path(:model_name =>  params[:model_name], :id => object) if authorized? :delete, @abstract_model, object
+              = link_to show_label,   show_path(:model_name =>    params[:model_name], :id => object.id) if authorized? :show,   @abstract_model, object
+              = link_to edit_label,   edit_path(:model_name =>    params[:model_name], :id => object.id) if authorized? :edit,   @abstract_model, object
+              = link_to delete_label, delete_path(:model_name =>  params[:model_name], :id => object.id) if authorized? :delete, @abstract_model, object
     - if @page_count.to_i > 1
       .pagination
         %ul
