--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -4,7 +4,7 @@
       %th.start
         = t "admin.dashboard.model_name"
       %th= t "admin.dashboard.last_used"
-      %th= t "admin.dashboard.records"
+      %th{:style => 'width:60%'}= t "admin.dashboard.records"
       %th
   %tbody
     - @abstract_models.each do |abstract_model|
@@ -13,19 +13,16 @@
         - row_class = "#{cycle("odd", "even")}#{" link" if list_path}"
 
         %tr{:class => row_class, :"data-link" => list_path}
-          %td.start
+          %td
             %span.show= link_to RailsAdmin.config(abstract_model).label, list_path
           %td
             - if (last_used = @most_recent_changes[abstract_model.pretty_name])
               = time_ago_in_words last_used
               = t "admin.dashboard.ago"
-          %td.count
-            %span.number= @count[abstract_model.pretty_name]
-            %span.scale
-              - percent = @count[abstract_model.pretty_name] * 100 / @max unless @max == 0
-              - percent = 1 if percent.nil?
-              %div{:class => "bar #{get_indicator(percent)}", :style => "width:#{percent}%;"}
-          %td.last
+          %td
+            - percent = (Math.log(@count[abstract_model.pretty_name]) * 100.0) / Math.log(@max)
+            .label{:class => get_indicator(percent), :style => "width:#{[5, percent].max.to_i}%;"}= @count[abstract_model.pretty_name]
+          %td
             - if authorized? :new, abstract_model
               = link_to t("admin.dashboard.add_new"), new_path(:model_name => abstract_model.to_param)
             - if authorized? :see_history, abstract_model
