--- a/app/views/rails_admin/main/show.html.haml
+++ b/app/views/rails_admin/main/show.html.haml
@@ -9,6 +9,6 @@
         %dl
           - fields.each_with_index do |field, index|
             - if (value = values[index]) || !RailsAdmin::config.compact_show_view
-              %dt.label= field.label
+              %dt.label{:class => "#{field.name}_field"}= field.label
               %dd
                 %pre.prettyprint= value || ' - '
