--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -20,7 +20,7 @@
               = time_ago_in_words last_used
               = t "admin.dashboard.ago"
           %td
-            - percent = (Math.log(@count[abstract_model.pretty_name]) * 100.0) / Math.log(@max)
+            - percent = (@max < 2.0 ? 0.0 : ((Math.log(@count[abstract_model.pretty_name]) * 100.0) / Math.log(@max)))
             .label.animate-width-to{:class => get_indicator(percent), :'data-animate-length' => ([1.0, percent].max.to_i * 20), :'data-animate-width-to' => "#{[2.0, percent].max.to_i}%", :style => "width:2%"}= @count[abstract_model.pretty_name]
           %td
             - if authorized? :new, abstract_model
