--- a/app/views/rails_admin/main/_history.html.haml
+++ b/app/views/rails_admin/main/_history.html.haml
@@ -3,8 +3,8 @@
 %table.zebra-striped
   %thead
     %tr
-      %th User
-      %th Changes
+      %th.user User
+      %th.changes Changes
   %tbody
     - history.each do |t|
       %tr
