--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -2,7 +2,7 @@
 - if main_app_root_path = (main_app.root_path rescue false)
   %li= link_to t('home.name').capitalize, main_app_root_path
 - if _current_user
-  - if authorized?(:edit, _current_user.class, _current_user)
+  - if authorized?(:edit, _current_user.class, _current_user) && _current_user.respond_to?(:email)
     %li= link_to _current_user.email, edit_path(_current_user.class.name.underscore.pluralize, _current_user)
   - if defined?(Devise)
     %li= link_to content_tag('span', t('admin.credentials.log_out'), :class => 'label important'), main_app.url_for(:action => 'destroy', :controller => 'devise/sessions'), :method => Devise.sign_out_via
