--- a/app/views/rails_admin/main/export.html.haml
+++ b/app/views/rails_admin/main/export.html.haml
@@ -43,7 +43,7 @@
   .row
     %fieldset
       %legend= t('admin.export.options_for', :name => 'csv')
-      - guessed_encoding = Rails.configuration.database_configuration[Rails.env]['encoding'].presence || 'UTF-8'
+      - guessed_encoding = (Rails.configuration.database_configuration[Rails.env]['encoding'].presence rescue 'UTF-8') || 'UTF-8'
       .clearfix
         %label{:for => "csv_options_encoding_to"}= t('admin.export.csv.encoding_to')
         -# from http://books.google.com/support/partner/bin/answer.py?answer=30990 :
