--- a/app/assets/stylesheets/rails_admin/jquery.colorpicker.css.scss
+++ b/app/assets/stylesheets/rails_admin/jquery.colorpicker.css.scss
@@ -3,7 +3,7 @@
     position: relative;
     width: 36px;
     height: 36px;
-    background: url(<%= asset_path('rails_admin/colorpicker/select2.png') %>);
+    background: image-url('rails_admin/colorpicker/select2.png');
 }
 
 .colorSelector div {
@@ -12,7 +12,7 @@
     left: 3px;
     width: 30px;
     height: 30px;
-    background: url(<%= asset_path('rails_admin/colorpicker/select2.png') %>) center;
+    background: image-url('rails_admin/colorpicker/select2.png') center;
 }
 
 .colorpicker {
@@ -20,7 +20,7 @@
 	height: 176px;
 	overflow: hidden;
 	position: absolute;
-	background: url(<%= asset_path('rails_admin/colorpicker/custom_background.png') %>);
+	background: image-url('rails_admin/colorpicker/custom_background.png');
 	font-family: Arial, Helvetica, sans-serif;
 	display: none;
 }
@@ -40,7 +40,7 @@
 	left: 0;
 	width: 150px;
 	height: 150px;
-	background: url(<%= asset_path('rails_admin/colorpicker/colorpicker_overlay.png') %>);
+	background: image-url('rails_admin/colorpicker/colorpicker_overlay.png');
 }
 .colorpicker_color div div {
 	position: absolute;
@@ -49,7 +49,7 @@
 	width: 11px;
 	height: 11px;
 	overflow: hidden;
-	background: url(<%= asset_path('rails_admin/colorpicker/colorpicker_select.gif') %>);
+	background: image-url('rails_admin/colorpicker/colorpicker_select.gif');
 	margin: -5px 0 0 -5px;
 }
 .colorpicker_hue {
@@ -65,7 +65,7 @@
 	width: 35px;
 	height: 9px;
 	overflow: hidden;
-	background: url(<%= asset_path('rails_admin/colorpicker/custom_indic.gif') %>) left top;
+	background: image-url('rails_admin/colorpicker/custom_indic.gif') left top;
 	margin: -4px 0 0 0;
 	left: 0px;
 }
@@ -103,7 +103,7 @@
 	position: absolute;
 	width: 72px;
 	height: 22px;
-	background: url(<%= asset_path('rails_admin/colorpicker/custom_hex.png') %>) top;
+	background: image-url('rails_admin/colorpicker/custom_hex.png') top;
 	left: 212px;
 	top: 142px;
 }
@@ -126,32 +126,32 @@
 	cursor: n-resize;
 }
 .colorpicker_rgb_r {
-	background-image: url(<%= asset_path('rails_admin/colorpicker/custom_rgb_r.png') %>);
+	background-image: image-url('rails_admin/colorpicker/custom_rgb_r.png');
 	top: 52px;
 	left: 212px;
 }
 .colorpicker_rgb_g {
-	background-image: url(<%= asset_path('rails_admin/colorpicker/custom_rgb_g.png') %>);
+	background-image: image-url('rails_admin/colorpicker/custom_rgb_g.png');
 	top: 82px;
 	left: 212px;
 }
 .colorpicker_rgb_b {
-	background-image: url(<%= asset_path('rails_admin/colorpicker/custom_rgb_b.png') %>);
+	background-image: image-url('rails_admin/colorpicker/custom_rgb_b.png');
 	top: 112px;
 	left: 212px;
 }
 .colorpicker_hsb_h {
-	background-image: url(<%= asset_path('rails_admin/colorpicker/custom_hsb_h.png') %>);
+	background-image: image-url('rails_admin/colorpicker/custom_hsb_h.png');
 	top: 52px;
 	left: 282px;
 }
 .colorpicker_hsb_s {
-	background-image: url(<%= asset_path('rails_admin/colorpicker/custom_hsb_s.png') %>);
+	background-image: image-url('rails_admin/colorpicker/custom_hsb_s.png');
 	top: 82px;
 	left: 282px;
 }
 .colorpicker_hsb_b {
-	background-image: url(<%= asset_path('rails_admin/colorpicker/custom_hsb_b.png') %>);
+	background-image: image-url('rails_admin/colorpicker/custom_hsb_b.png');
 	top: 112px;
 	left: 282px;
 }
@@ -160,7 +160,7 @@
 	position: absolute;
 	width: 22px;
 	height: 22px;
-	background: url(<%= asset_path('rails_admin/colorpicker/custom_submit.png') %>) top;
+	background: image-url('rails_admin/colorpicker/custom_submit.png') top;
 	left: 322px;
 	top: 142px;
 	overflow: hidden;
